--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Inter', 'Arial', sans-serif;
-    
 }
 
 h1 {
@@ -50,15 +49,18 @@ nav {
 main {
     order: 2;
     flex-grow: 6;
-    flex-shrink: 1;
+    flex-shrink: auto;
     flex-basis: 2;
-    width: fit-content;
+    flex-wrap: wrap;
+    width: auto;
+    overflow: hidden;
 }
 aside {
     order: 1;
     flex-grow: 1;
     flex-shrink: 1;
     flex-basis: 1;
+    flex-wrap: nowrap;
     width: 210px;
     border-right: 1px solid #e1e1e1;
     padding: 30px 50px;
@@ -132,7 +134,7 @@ footer .container .footer-flex {
 .wrapper {
     display: flex;
     flex-direction: row;
-    width: fit-content;
+    width: 100%;
 }
 
 .container {
@@ -189,12 +191,14 @@ footer .container .footer-flex {
 }
 
 .company-about .container-box-wrapper .box {
-    justify-content:flex-start;
+    justify-content: space-around;
     align-items: center;
+    
 }
 
-.company-about .container-box-wrapper .box-info {
+.company-about .container-box-wrapper .box .box-info {
     width: 337px;
+    
 }
 
 /*TIMELINE SECTION*/
@@ -237,10 +241,26 @@ footer .container .footer-flex {
     background-color: #fff;
 }
 
+.company-strategy h2 {
+    padding-bottom: 90px;
+}
+
+.company-strategy p {
+    font-size: 16px;
+    padding-top: 50px;
+}
+
 .company-strategy .container {
     background-color: #fff;
 }
 
+.company-strategy .box {
+    justify-content: space-between;
+}
+
+.company-strategy .box-info {
+    width: 337px;
+}
 /*COMPANY PROJECTS SECTION*/
 .box-counter {
     display: flex;
@@ -298,9 +318,10 @@ footer .container .footer-flex {
 }
 
 .company-info a {
+    display: block;
+    padding-top: 20px;
     color: #00367a;
     font-size: 12px;
-    padding: 30px;
 }
 
 .company-info p {
@@ -318,11 +339,11 @@ footer .container .footer-flex {
 .company-info-columns {
     display: flex;
     flex-direction: column;
-    padding: 50px;
+    padding: 30px;
 }
 
 .company-info-columns span {
-    padding: 10px 0;
+    padding: 7px 0;
     color: #9da8b6;
     font-size: 12px;
 }
@@ -335,4 +356,25 @@ footer .container .footer-flex {
 .arrow-container {
     margin: 0 auto;
     width: fit-content;
+}
+
+@media (max-width:980px){
+    aside {
+        width: 90px;
+    }
+
+    .container {
+        padding: 70px 30px
+    }
+
+    .box {
+        flex-direction: column;
+    }
+    .company-info-columns {
+        padding: 20px;
+    }
+
+    .company-info .container {
+        padding: 70px 30px;
+    }
 }
