--- a/style.css
+++ b/style.css
@@ -94,8 +94,8 @@ label {
 input {
     border: none;
     border-bottom: 1px solid #9da8b6;
-    width: 477px;
     padding-bottom: 20px;
+    width: 400px;
 }
 
 .checkbox {
@@ -104,7 +104,6 @@ input {
     border: none;
     box-shadow: 0px 7px 20px rgba(0, 0, 0, 0.07);
     border-radius: 6px;
-    float: left;
 }
 
 textarea {
@@ -295,13 +294,24 @@ footer .container .footer-flex {
     align-items: center;
 }
 
-/*COMPANY CONTACT US SECTION*/
-.company-contact-us .box {
+/*COMPANY CONTACT SECTION*/
+.company-contact .box {
     justify-content: space-between;
 }
 
-.company-contact-us .box-info {
+.company-contact .box-info {
     padding-right: 20px;
+    width: auto;
+}
+
+.company-contact button {
+    display: block;
+    width: 225px;
+    background-color: #0052b4;
+    color: #fff;
+    border: none;
+    padding: 15px 0;
+    margin-bottom: 10px;
 }
 
 /*COMPANY INFO SECTION*/
@@ -361,6 +371,10 @@ footer .container .footer-flex {
 @media (max-width:980px){
     aside {
         width: 90px;
+    }
+
+    input {
+        width: 200px;
     }
 
     .container {
