--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
     font-family: 'Inter', 'Arial', sans-serif;
 }
 
+/*COMMON STYLES*/
 h1 {
    color: #000;
    font-weight: 900;
@@ -39,13 +40,6 @@ p {
     margin-bottom: 20px;
 }
 
-nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: stretch;
-    padding: 30px 50px;
-}
-
 main {
     order: 2;
     flex-grow: 6;
@@ -63,6 +57,32 @@ aside {
     flex-wrap: nowrap;
     width: 210px;
     border-right: 1px solid #e1e1e1;
+    padding: 30px 50px;
+}
+
+.wrapper {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    background-color: #f5f5f5;
+}
+
+.container {
+    padding: 130px 70px;
+}
+
+.box {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: stretch;
+    padding: 60px 0;
+}
+
+/*NAVBAR*/
+nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: stretch;
     padding: 30px 50px;
 }
 
@@ -87,75 +107,6 @@ li {
     list-style-type: none;
     padding-right: 30px;
 }
-
-label {
-    font-family: 'Inter', sans-serif;
-    font-weight: 500;
-    font-size: 12px;
-    color: rgba(152, 152, 152, 0.75);
-}
-
-input {
-    border: none;
-    border-bottom: 1px solid #9da8b6;
-    padding-bottom: 20px;
-    width: 400px;
-    background-color: #f5f5f5;
-}
-
-.checkbox {
-    width: 24px;
-    height: 24px;
-    border: none;
-    box-shadow: 0px 7px 20px rgba(0, 0, 0, 0.07);
-    border-radius: 6px;
-}
-
-textarea {
-    border: none;
-    background-color: #f5f5f5;
-}
-
-footer span {
-    padding-right: 10px;
-}
-
-footer .container {
-    color: #9da8b6;
-    display: flex;
-    height: 55px;
-    justify-content: space-between;
-    border-top: 1px solid #e1e1e1;
-    padding: 10px 70px;
-    font-size: 12px;
-}
-
-footer .container .footer-flex {
-    display: flex;
-    justify-content: space-evenly;
-}
-
-.wrapper {
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-    background-color: #f5f5f5;
-}
-
-.container {
-    padding: 130px 70px;
-}
-
-.box {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: stretch;
-    padding: 60px 0;
-}
-
-
-
-/*NAVBAR*/
 .login-ul img {
     padding-right: 5px;
 }
@@ -201,23 +152,6 @@ footer .container .footer-flex {
     padding: 0 70px;
 }
 
-/*COMPANY ABOUT SECTION*/
-.company-about p {
-    padding: 30px 0;
-}
-
-.company-about .container-box-wrapper .box {
-    justify-content: space-around;
-    align-items: center;
-    
-}
-
-.company-about .container-box-wrapper .box .box-info {
-    width: 337px;
-    
-}
-
-/*TIMELINE SECTION*/
 .timeline {
     display: flex;
     align-items: center;
@@ -250,6 +184,41 @@ footer .container .footer-flex {
     transform: rotate(180deg);
 }
 
+/*COMPANY ABOUT SECTION*/
+.company-about p {
+    padding: 30px 0;
+}
+
+.company-about .container-box-wrapper .box {
+    justify-content: space-around;
+    align-items: center;
+    
+}
+
+.company-about .container-box-wrapper .box .box-info {
+    width: 337px;
+}
+
+.img-text-box {
+    display: flex;
+    width: 249px;
+    height: 96px;
+    position: absolute;
+    top: 1350px;
+    margin-left: 60px;
+    background-color: #fff;
+    box-shadow: 0px 0px 4px rgba(0,0,0,15%);
+    border-radius: 5px;
+}
+
+.img-text-box p {
+    font-size: 12px;
+    line-height: 22px;
+    padding: 0;
+    margin: 0;
+    padding-top: 20px;
+}
+
 /*COMPANY STRATEGY SECTION*/
 .company-strategy {
     display: flex;
@@ -268,27 +237,19 @@ footer .container .footer-flex {
 
 .company-strategy h2 {
     padding-bottom: 90px;
-    
 }
 
 .company-strategy p {
     font-size: 16px;
     padding-top: 50px;
-    
-
 }
-
 
 .company-strategy .box {
     justify-content: space-between;
-    
-
 }
 
 .company-strategy .box-info {
     width: 337px;
-    
-
 }
 /*COMPANY ACHIEVEMENTS SECTION*/
 .box-counter {
@@ -325,6 +286,34 @@ footer .container .footer-flex {
 }
 
 /*COMPANY CONTACT SECTION*/
+label {
+    font-family: 'Inter', sans-serif;
+    font-weight: 500;
+    font-size: 12px;
+    color: rgba(152, 152, 152, 0.75);
+}
+
+input {
+    border: none;
+    border-bottom: 1px solid #9da8b6;
+    padding-bottom: 20px;
+    width: 400px;
+    background-color: #f5f5f5;
+}
+
+.checkbox {
+    width: 24px;
+    height: 24px;
+    border: none;
+    box-shadow: 0px 7px 20px rgba(0, 0, 0, 0.07);
+    border-radius: 6px;
+}
+
+textarea {
+    border: none;
+    background-color: #f5f5f5;
+}
+
 .company-contact .box {
     justify-content: space-between;
 }
@@ -398,8 +387,33 @@ footer .container .footer-flex {
     width: fit-content;
 }
 
-@media (max-width:980px){
+/*FOOTER*/
+footer span {
+    padding-right: 10px;
+}
 
+footer .container {
+    color: #9da8b6;
+    display: flex;
+    height: 55px;
+    justify-content: space-between;
+    border-top: 1px solid #e1e1e1;
+    padding: 10px 70px;
+    font-size: 12px;
+}
+
+footer .container .footer-flex {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+@media (max-width:1340px){
+    .img-text-box {
+        top: 1450px;
+    }
+}
+
+@media (max-width:980px){
     aside {
         width: 100px;
         padding: 10px;
@@ -445,6 +459,10 @@ footer .container .footer-flex {
     .company-info .container {
         padding: 70px 30px;
     }
+    
+    .img-text-box {
+        top: 1650px;
+    }
 }
 
 @media (max-width: 670px){
@@ -489,4 +507,8 @@ footer .container .footer-flex {
    .logo-container {
        height: 550px;
    }
+   .img-text-box {
+       top: 1450px;
+   }
 }
+
