--- a/style.css
+++ b/style.css
@@ -165,6 +165,7 @@ li {
     border-radius: 50%;
     border: 1px solid #ff7616;
     padding: 5px;
+    margin: 0 10px;
 }
 
 .circle-blue {
@@ -227,8 +228,23 @@ li {
     overflow-y: hidden;
 }
 
-.company-strategy .strategy-container {
-    width: 1229px;
+.company-strategy .timeline {
+    padding-left: 0;
+    padding-right: 0;
+}
+
+.company-strategy .timeline span {
+    position: relative;
+    top: 50px;
+    color: #ff7616;
+}
+
+.company-strategy .strategy-container .box-info {
+    margin-right: 272px;
+}
+
+.company-strategy .strategy-container .box-img {
+    margin-right: 180px;
 }
 
 .company-strategy .line {
