--- a/style.css
+++ b/style.css
@@ -158,7 +158,6 @@ li {
 }
 
 .circle-orange {
-    box-sizing: border-box;
     width: 35px;
     height: 35px;
     background-color: #ff7616;
@@ -166,16 +165,17 @@ li {
     border: 1px solid #ff7616;
     padding: 5px;
     margin: 0 10px;
+    background-clip: content-box;
 }
 
 .circle-blue {
-    box-sizing: border-box;
-    width: 13px;
-    height: 13px;
+    width: 20px;
+    height: 20px;
     background-color: #0052b4;
     border-radius: 50%;
-    padding: 10px;
+    padding: 3px;
     border: 1px solid #0052b4;
+    background-clip: content-box;
 }
 
 .line {
