--- a/homepage.css
+++ b/homepage.css
@@ -14,7 +14,7 @@ nav {
     display: flex;
     flex-direction: column;
     width: 69px;
-    height: 100%;
+    height: 100vh;
 }
 
 .logo {
@@ -25,3 +25,21 @@ nav {
     height: 63px;
 }
 
+.navbar {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.navbar a {
+    padding-bottom: 40px;
+}
+
+.navbar  .active {
+    background-color: #ff7616;
+    padding: 10px;
+    margin-top: 15px;
+    border-radius: 5px;
+    box-shadow: 0px 0px 4px rgba(255. 118. 22. 0.25);
+}
