--- a/homepage.css
+++ b/homepage.css
@@ -15,6 +15,7 @@ nav {
     flex-direction: column;
     width: 69px;
     height: 100vh;
+    position: fixed;
 }
 
 .logo {
@@ -42,4 +43,53 @@ nav {
     margin-top: 15px;
     border-radius: 5px;
     box-shadow: 0px 0px 4px rgba(255. 118. 22. 0.25);
+}
+
+/*HEADER*/
+header {
+    margin-left: 69px;
+    height: 63px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 1px solid #e6e6e6;
+}
+
+.search {
+    padding: 12px 0 15px 0px;
+    background-color: #fff;
+    margin-left: 32px;
+    border-radius: 6px;
+    box-shadow: 0px 7px 64px rgba(0. 0. 0. 0.07);
+    width: 300px;
+}
+
+label {
+    padding: 13px;
+}
+
+input {
+    border: none;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+    font-size: 12.8px;
+}
+
+.profile img {
+    padding: 18px;
+}
+
+.profile img:first-child {
+    margin-bottom: 5px;
+}
+
+@media (max-width: 600px){
+    header {
+        flex-direction: column;
+        padding: 10px 0;
+    }
+
+    .search {
+        width: auto;
+    }
 }
