--- a/homepage.css
+++ b/homepage.css
@@ -6,6 +6,7 @@
 
 body {
     background-color: #e5e5e5;
+    font-family: 'Inter', 'Arial', sans-serif;
 }
 
 /*NAVBAR*/
@@ -82,6 +83,83 @@ input {
 .profile img:first-child {
     margin-bottom: 5px;
 }
+
+/*MAIN AND ASIDE SECTION*/
+.main-aside-container {
+    display: flex;
+    flex-direction: row;
+    margin-left: 69px;
+}
+
+main {
+
+}
+
+aside {
+
+}
+
+.container {
+    background-color: #fff;
+}
+
+.wrapper {
+    padding: 14px 26px;
+}
+
+.featured {
+    display: flex;
+    flex-direction: row;
+    margin-left: 32px;
+}
+
+.featured .container {
+    border-radius: 10px;
+    margin-right: 18px;
+}
+
+.container-blue {
+    color: #fff;
+    background-color: #0052b4;
+    width: 308px;
+}
+
+.container-blue h1 {
+    font-weight: 900;
+    font-size: 20px;
+}
+
+.container-blue h2 {
+    font-size: 35px;
+}
+
+.container-blue p {
+    font-weight: 500;
+    font-size: 10px;
+    font-style: normal;
+}
+
+.container-blue hr {
+    height: 1px;
+    color: #fff;
+    mix-blend-mode: normal;
+    opacity: 0.2;
+}
+
+.months-container {
+    padding: 18px 28px;
+}
+
+.months-container span {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 500;
+    font-size: 8px;
+    letter-spacing: 0.32px;
+    opacity: 0.5;
+    mix-blend-mode: normal;
+    padding-right: 15px;
+}
+
 
 @media (max-width: 600px){
     header {
